Committing code from my work with Claude. I think we can make this better in the future
